refactor(auth-service): 설계 원칙 기반 전체 코드 리팩토링
- domain(User): brithDay→birthDate 오타 수정, isLocked→locked 필드명 정리,
  setRole() 제거 후 Builder에 role 파라미터 포함, MAX_FAIL_COUNT 상수 추출,
  getRoleType() 위임 메서드 추가, lastLoginDate 수동 할당 제거
- dto(TokenDto): record로 전환하여 불변성 확보
- dto(SignupRequest): birthDay→birthDate 필드명 정정
- dto(UsernameCheckRequest): /exists 전용 DTO 신규 추가 (SignupRequest 의존 제거)
- security(NakamaUserDetails): getUser() 노출 제거, recordLoginSuccess() 위임 추가
- service(AuthService): login/signup 내부 로직을 단일 책임 메서드로 분리,
  usernameExistsCheck→isUsernameTaken 명칭 개선, DEFAULT_ROLE 상수 추출
- controller(AuthController): SIGNUP_SUCCESS_MESSAGE 상수 추출, /exists에 @Valid 적용
- security(JwtProvider): generateToken 21→5라인으로 단축, 내부 메서드 5개로 분리
- config(SecurityConfig): corsAllowUrl 네이밍 수정, cors 필터체인 누락 버그 수정,
  PUBLIC_ENDPOINTS/ALLOWED_METHODS 상수 추출, Arrays.asList→List.of 전환
- utils(RoleInitializer): 매직스트링→상수, !isPresent()→isEmpty(), initializeRole() 추출
- exception(ErrorResponse): 중복 생성자→private 생성자+정적 팩토리 of(), Map.copyOf() 적용
- exception(GlobalExceptionHandler): collectFieldErrors() 메서드 추출, 스트림 방식 전환

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>